alignemtn fixes

--- a/wp-content/themes/ar-freight/scss/_home-about.scss
+++ b/wp-content/themes/ar-freight/scss/_home-about.scss
@@ -171,7 +171,7 @@
                         p {
                             display: -webkit-box;
                             height: 91.2px;
-                            margin-bottom: 10%;
+                            margin-bottom: 5%;
                             line-height: 22px;
                             -webkit-line-clamp: 4;
                             -webkit-box-orient: vertical;
@@ -180,6 +180,9 @@
                             color: $primary-black;
                             font-size: 14px;
                             font-family: Roboto-Rg;
+                            @media all and (max-width: 1024px) {
+                                margin-bottom: 0; 
+                            }
                         }
 
                         .about-us-learn-more {
